--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.firebase:firebase-jobdispatcher:0.8.5'
     compile 'com.google.firebase:firebase-invites:11.4.2'
+    compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.google.android.gms:play-services-maps:11.4.2'
     compile 'com.google.firebase:firebase-config:11.4.2'
     compile 'com.google.firebase:firebase-auth:11.4.2'
