--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.techease.whereyou"
         minSdkVersion 21
@@ -44,7 +44,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
@@ -74,14 +74,11 @@ dependencies {
     compile 'us.belka:androidtoggleswitch:1.2.2'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile('com.facebook.android:facebook-android-sdk:4.27.0')
-
+    compile 'com.facebook.android:facebook-android-sdk:4.27.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-
 }
 apply plugin: 'com.google.gms.google-services'
 
