--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.4.2'
     compile 'com.google.firebase:firebase-config:11.4.2'
     compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.firebaseui:firebase-ui-database:0.4.4'
     compile 'com.google.android.gms:play-services-location:11.4.2'
     compile 'com.google.android.gms:play-services-places:11.4.2'
     compile 'com.android.support:multidex:1.0.2'
