--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support:design:27.0.2'
+    implementation 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.android.support:multidex:1.0.2'
     compile 'com.android.support:cardview-v7:27.0.2'
@@ -74,6 +75,8 @@ dependencies {
     compile 'com.android.support:multidex:1.0.2'
     compile 'us.belka:androidtoggleswitch:1.2.2'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
+    //Emoji Library
+    compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.facebook.android:facebook-android-sdk:4.27.0'
     testImplementation 'junit:junit:4.12'
