--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
+        maven { url "https://dl.bintray.com/hani-momanii/maven"}
 
         mavenCentral()
         google()
