--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,40 +45,38 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.google.firebase:firebase-storage:11.4.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    compile 'com.google.firebase:firebase-storage:15.0.0'
     compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.android.support:multidex:1.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.android.support:cardview-v7:27.1.1'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
     compile 'me.zhanghai.android.materialratingbar:library:1.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:4.4.0'
+    compile 'com.github.bumptech.glide:glide:4.6.1'
     compile 'io.nlopez.smartlocation:library:3.3.3'
     compile 'io.nlopez.smartlocation:rx:3.3.1'
-    compile 'com.google.firebase:firebase-core:11.4.2'
-    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.firebase:firebase-core:15.0.0'
+    compile 'com.google.firebase:firebase-messaging:15.0.0'
     compile 'com.firebase:firebase-jobdispatcher:0.8.5'
-    compile 'com.google.firebase:firebase-invites:11.4.2'
-    compile 'com.google.firebase:firebase-database:11.4.2'
-    compile 'com.google.android.gms:play-services-maps:11.4.2'
-    compile 'com.google.firebase:firebase-config:11.4.2'
-    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-invites:15.0.0'
+    compile 'com.google.firebase:firebase-database:15.0.0'
+    compile 'com.google.android.gms:play-services-maps:15.0.0'
+    compile 'com.google.firebase:firebase-config:15.0.0'
+    compile 'com.google.firebase:firebase-auth:15.0.0'
     compile 'com.firebaseui:firebase-ui-database:0.4.4'
-    compile 'com.google.android.gms:play-services-location:11.4.2'
-    compile 'com.google.android.gms:play-services-places:11.4.2'
-    compile 'com.android.support:multidex:1.0.2'
+    compile 'com.google.android.gms:play-services-location:15.0.0'
+    compile 'com.google.android.gms:play-services-places:15.0.0'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'us.belka:androidtoggleswitch:1.2.2'
-    compile 'com.firebaseui:firebase-ui-auth:3.1.0'
+    compile 'com.firebaseui:firebase-ui-auth:3.2.2'
     //Emoji Library
     compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.facebook.android:facebook-android-sdk:4.27.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
