--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.techease.whereyou">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -17,29 +16,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".ui.activities.SplashScreen"
-            android:theme="@style/AppTheme.NoActionBar"
-            >
+        <activity
+            android:name=".ui.activities.SplashScreen"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.Navigation"></activity>
-
+            android:theme="@style/AppTheme.Navigation" />
         <activity
             android:name=".ui.activities.FullScreenActivity"
             android:label="@string/title_activity_fullscreen"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <!-- Firebase   Notification Work here -->
 
@@ -73,12 +66,13 @@
             </intent-filter>
         </service>
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCFrpFrSvjdyu7QedwiUH6z-9IopcLfB0E" />
 
-            <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyCFrpFrSvjdyu7QedwiUH6z-9IopcLfB0E"/>
-        <uses-library android:name="com.google.android.maps"/>
+        <uses-library android:name="com.google.android.maps" />
 
+        <activity android:name=".ui.activities.ChatActivity"></activity>
     </application>
 
 </manifest>
