--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".ui.activities.FullScreenActivity"
             android:label="@string/title_activity_fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <!-- Firebase   Notification Work here -->
