--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,36 +50,36 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.android.support:cardview-v7:27.1.1'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile 'me.zhanghai.android.materialratingbar:library:1.2.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    compile 'io.nlopez.smartlocation:library:3.3.3'
-    compile 'io.nlopez.smartlocation:rx:3.3.1'
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
+    implementation 'io.nlopez.smartlocation:rx:3.3.1'
     implementation 'com.karumi:dexter:4.2.0'
-    compile 'com.google.firebase:firebase-core:15.0.0'
-    compile 'com.google.firebase:firebase-messaging:15.0.0'
-    compile 'com.firebase:firebase-jobdispatcher:0.8.5'
-    compile 'com.google.firebase:firebase-invites:15.0.0'
-    compile 'com.google.firebase:firebase-database:15.0.0'
-    compile 'com.google.android.gms:play-services-maps:15.0.0'
-    compile 'com.google.firebase:firebase-config:15.0.0'
-    compile 'com.google.firebase:firebase-auth:15.0.0'
-    compile 'com.firebaseui:firebase-ui-database:0.4.4'
-    compile 'com.google.android.gms:play-services-location:15.0.0'
-    compile 'com.google.android.gms:play-services-places:15.0.0'
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'us.belka:androidtoggleswitch:1.2.2'
-    compile 'com.firebaseui:firebase-ui-auth:3.2.2'
-    compile 'com.google.firebase:firebase-storage:15.0.0'
+    implementation 'com.google.firebase:firebase-core:15.0.2'
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+    implementation 'com.google.firebase:firebase-invites:15.0.0'
+    implementation 'com.google.firebase:firebase-database:15.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.firebase:firebase-config:15.0.0'
+    implementation 'com.google.firebase:firebase-auth:15.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.4'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
+    implementation 'com.google.android.gms:play-services-places:15.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'us.belka:androidtoggleswitch:1.2.2'
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
+    implementation 'com.google.firebase:firebase-storage:15.0.0'
     //Emoji Library
-    compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
-    compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
+    implementation 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
+    implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
     implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
