--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".controllers.AppController"
         android:allowBackup="true"
         android:icon="@drawable/whereyou"
         android:label="@string/app_name"
@@ -21,6 +22,7 @@
         <activity
             android:name=".ui.activities.SplashScreen"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
