--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,8 @@
 
         <uses-library android:name="com.google.android.maps" />
 
-        <activity android:name=".ui.activities.ChatActivity"></activity>
+        <activity android:name=".ui.activities.ChatActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
